added info section

--- a/style/style.css
+++ b/style/style.css
@@ -55,3 +55,37 @@ color: aliceblue;
 background-color: #0D1321;}
 .banner-bg{background-image: url(../assets/Hero-bg.png);
 height: 652px;}
+
+
+/* info part */
+.info-part{max-height: 1233px;
+           max-width:996px ;
+        border: 2px solid red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        margin: 0 auto;}
+.info-flex{display: flex;
+justify-content: center;
+align-items: center;}
+.info-text{text-align: center;}
+.info-text h3{font-size: 32px;
+font-weight: bolder;}
+.info-text p{font-size: 16px;
+}
+.inline{align-self: flex-end;}
+.h3{font-size: 24px;
+font-weight: bold;}
+
+.btn{width: 171px;
+    height: 47px;
+    font-size: 20px;
+    font-weight: 700px;
+    border-radius: 8px;
+    background-color: aliceblue;
+    color: #0D1321;}
+    .btn a{text-decoration: none;
+    color: #0D1321;}
+    .btn a:hover{color: rgb(167, 99, 231);}
+
